Most testing is done, trying to incorporate service class into api